--- a/WebContent/movies.html
+++ b/WebContent/movies.html
@@ -1,4 +1,4 @@
-<div ng-controller="">
+<div >
 	<section id="contentSection">
 		<div class="row">
 			<div class="col-lg-8 col-md-8 col-sm-8">
@@ -9,191 +9,24 @@
 					<div class="single_post_content">
 						<div class="single_post_content_right">
 							<ul class="spost_nav">
-								<li class="contentcard">
+								<li ng-repeat="item in newsItems"  class="contentcard">
 									<div class="media wow fadeInDown">
 										<a href="newsdescription.html" class="media-left"> <img
 											alt="" src="images/post_img1.jpg">
 										</a>
 										<div class="media-body">
 											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" " class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">
-												రణ్‌బీర్‌పాట..అమితాబ్‌ మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img1.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
-										</div>
-									</div>
-								</li>
-								<li class="contentcard">
-									<div class="media wow fadeInDown">
-										<a href="newsdescription.html" class="media-left"> <img
-											alt="" src="images/post_img2.jpg">
-										</a>
-										<div class="media-body">
-											<a href="newsdescription.html" class="catg_title">రణ్‌బీర్‌పాట..అమితాబ్‌
-												మనవరాలి డాన్సులు! </a>
+												{{item.heading}}</a>
 										</div>
 									</div>
 								</li>
 							</ul>
 						</div>
-
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4">
 				<div class="right_content">
-
 					<div class="single_sidebar">
 						<ul class="spost_nav">
 							<li class="contentcard">
@@ -229,9 +62,7 @@
 						</ul>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</section>
-
 </div>
