Made changes in displaying the newsitems

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -85,14 +85,16 @@ S								</ul>
 					<ul class="nav navbar-nav main_nav">
 						<li class="active"><a href="#!/homepage"><span
 								class="fa fa-home desktop-home"></span><span class="mobile-show">Home</span></a></li>
-						<li ng-click="getNewsItems(14)"><a href="#!/andhra">ఆంధ్రప్రదేశ్ </a></li>
-						<li class="dropdown" ng-click="getNewsItems(15)" ><a href="#!/telangana">తెలంగాణ</a></li>
-						<li class="dropdown" ng-click="getNewsItems(7)"><a href="#!/movies">సినిమాలు </a></li>
-						<li class="dropdown" ng-click="getNewsItems(9)"><a href="#!sports">క్రీడలు</a></li>
-						<li class="dropdown" ng-click="getNewsItems(10)"><a href="#!study">విద్య</a></li>
-						<li class="dropdown" ng-click="getNewsItems(11)"><a href="#!jobs">ఉద్యోగాలు</a></li>
-						<li class="dropdown" ng-click="getNewsItems(12)"><a href="#!national">జాతీయం</a></li>
-						<li class="dropdown" ng-click="getNewsItems(13)"><a href="#!international">అంతర్జాతీయం</a>
+						<li ng-click="getItemsByCateogry(3)"><a>ఆంధ్రప్రదేశ్ </a></li>
+						<li class="dropdown" ng-click="getItemsByCateogry(4)" ><a >తెలంగాణ</a></li>
+						<li class="dropdown" ng-click="getItemsByCateogry(8)"><a >సినిమాలు </a></li>
+						<li class="dropdown" ng-click="getItemsByCateogry(7)"><a >క్రీడలు</a></li>
+						<li class="dropdown" ng-click="getItemsByCateogry(6)"><a >విద్య</a></li>
+						<li class="dropdown" ng-click="getItemsByCateogry(5)"><a >ఉద్యోగాలు</a></li>
+						<li class="dropdown" ng-click="getItemsByCateogry(2)"><a >జాతీయం</a></li>
+						<li class="dropdown" ng-click="getItemsByCateogry(1)"><a >అంతర్జాతీయం</a>
+						
+						
 					</ul>
 				</div>
 			</nav>
